# compiler_migos

./: .gitignore  LA_EXECUTABLE  Makefile  README.md  a.out  input  lexical_analyser.cpp  lexical_pseudocode.txt  linked_list.cpp  linked_list.h  output  use_case_compile_success.txt
compiler/: .gitignore  Makefile
compiler/src/: main.cpp  parser.cpp  parser.h
parser_segments/: atrib_call_procedure.cpp  et_variable_analyser.cpp  factor_analyser.cpp  function_declaration_analyser.cpp  general_parser.h  procedure_declaration_analyser.cpp  read_analyser.cpp  snippet_analyser.cpp  subroutine_analyser.cpp  type_analyser.cpp  variables_analyser.cpp  while_analyzer.cpp  write_analyser.cpp
parser_segments/syntax_analysis/: conditional_analyser.cpp
src/: Token.h  lexical_analyser.cpp  lexical_analyser.h  linked_list.cpp  linked_list.h  parser.cpp  symbol_table.cpp  symbol_table.h  symbols.cpp  symbols.h  syntactic_analyser.cpp
src/checker/: symbol_table.cpp  symbol_table.h
src/code_generator/: address.cpp  address.h  generate.cpp  generate.h
src/dev_env/: tests.cpp  tests.h
src/error/: Errors.cpp  Errors.h
src/expression_builder/: Expr_token.h  expression_builder.cpp  expression_builder.h  semantic_analyzer.cpp  semantic_analyzer.h  types_table.h
src/lexical/: lexical_analyzer.h  (+1 more)
tests/: syntax_tests  teste.txt
virtual_machine/: CMakeLists.txt  Makefile
virtual_machine/src/: main.cpp
virtual_machine/src/ui/: application.cpp  application.h  fileexplorer.cpp  fileexplorer.h  mainwindow.cpp  mainwindow.h
virtual_machine/src/virtual_machine/: DVM.cpp  DVM.h
(+145 files in other folders)
